Diseño de tarjetas rotativas
El diseño para las tarjetas,  sobre informacion de la estetica de bob esponja

--- a/Index.HTML
+++ b/Index.HTML
@@ -34,7 +34,70 @@
             <h2>Historia</h2>
           
         <section class="Estética">
-            <h2>Estética</h2>
+            <h2 id="tituloEstetica">Estetica</h2>
+            <div class="card-container">
+                <div class="card">
+                  <div class="card-face front">
+                    <img src="imagen1.jpg" alt="Imagen 1" id="imagenTarjetas">
+                  </div>
+                  <div class="card-face back">
+                    <h2>Diseño de Personajes Caricaturescos</h2>
+                    <p>prueba de texto en la carta.</p>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="card-face front">
+                    <img src="imagen2.jpg" alt="Imagen 2" id="imagenTarjetas">
+                  </div>
+                  <div class="card-face back">
+                    <h2>Ambientes Fantasticos y Surrealistas</h2>
+                    <p>prueba de texto en la carta.</p>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="card-face front">
+                    <img src="imagen3.jpg" alt="Imagen 3"id="imagenTarjetas">
+                  </div>
+                  <div class="card-face back">
+                    <h2>Referencias a la Cultura Popular</h2>
+                    <p>prueba de texto en la carta.</p>
+                  </div>
+                </div>
+              </div>
+
+
+
+              <div class="card-container">
+                <div class="card">
+                  <div class="card-face front">
+                    <img src="imagen1.jpg" alt="Imagen 4" id="imagenTarjetas">
+                  </div>
+                  <div class="card-face back">
+                    <h2>Colorimetria</h2>
+                    <p>prueba de texto en la carta</p>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="card-face front">
+                    <img src="imagen2.jpg" alt="Imagen 5"id="imagenTarjetas">
+                  </div>
+                  <div class="card-face back">
+                    <h2>Humor</h2>
+                    <p>prueba de texto en la carta</p>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="card-face front">
+                    <img src="imagen3.jpg" alt="Imagen 6" id="imagenTarjetas">
+                  </div>
+                  <div class="card-face back">
+                    <h2>Rasgos</h2>
+                    <p>Prueba de texto en la carta</p>
+                  </div>
+                </div>
+              </div>
+
+
            
         </section>
 
