--- a/Index.HTML
+++ b/Index.HTML
@@ -6,6 +6,7 @@
     <title>Bob Esponja</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Slackey&display=swap" rel="stylesheet">
+<link href='https://fonts.googleapis.com/css?family=Bubblegum Sans' rel='stylesheet'>
 <link rel="stylesheet" href="CSS/reset.css">
 <link rel="stylesheet" href="CSS/Style.css">
 <link rel="stylesheet" href="CSS/Curiosidades-Teorias.css">
@@ -103,6 +104,21 @@
 
         <section class="Personajes">
             <h2>Personajes</h2>
+            <div class="container">
+              <div class="div1"><img src="image.jpg" alt="Imagen bob esponja">
+                <p class="Bob">
+                  Es una esponja marina amarilla y optimista que vive en una piña debajo del mar. Trabaja como cocinero en el Crustáceo Cascarudo.
+                </p>
+              </div>
+              <div class="div2"><img src="image.jpg" alt="Imagen patricio estrella">
+                <p class="patricio">
+                  Una estrella de mar rosa, perezosa, algo ingenua pero extremadamente leal, mejor amigo de Bob Esponja.
+                </p></div>
+                <div class="div3"><img src="image.jpg" alt="Imagen calamardo">
+                  <p class="calamardo">
+                    Un calamar gruñón y sarcástico que vive al lado de Bob Esponja. Trabaja como cajero en el Crustáceo Cascarudo y sueña con tener éxito en el arte. 
+                  </p></div>
+            </div>
             
         </section>
 
