Agregue la seccion de Miguel Rene

--- a/Index.HTML
+++ b/Index.HTML
@@ -52,8 +52,10 @@
             <h2>Curiosidades y Teorias</h2>
           
         </section>
+        <section class="Miguel">   
+        
+        </section>
     </main>
-
 </body>
 <footer>
     <h2>Pie de Pagina</h2>
