Primer cambio (prueba)

--- a/Index.HTML
+++ b/Index.HTML
@@ -51,8 +51,8 @@
         <section class="Curiosidade-Teorias">
             <h2>Curiosidades y Teorias</h2>
           
-        </section>
-        <section class="Miguel">   
+        </section> <section class="Miguel">
+            <h2>Memes</h2>
         
         </section>
     </main>
