Correccion de error
Falto cerrar la seccion de Historia, para evitar conflictos futuros

--- a/Index.HTML
+++ b/Index.HTML
@@ -53,7 +53,7 @@
 
         <section class="Historia">
             <h2>Historia</h2>
-
+        </section>
             <section class="Estética">
                 <h2>Estética</h2>
 
