Update Impacto Cultural
Se agrego la estructura del texto de Impacto cultural e estructura de imagenes para en un futuro agregarlas

--- a/Index.HTML
+++ b/Index.HTML
@@ -45,6 +45,18 @@
 
         <section class="Impacto-cultural">
             <h2>Impacto Cultural</h2>
+
+                <p>
+                El impacto que tuvo "Bob Esponja" desde su debut se refleja en su inflencia en otras producciones animadas, como homenajes, cameos, referencias y meemes. Ademas, la serie ha trascendido la pantalla para convertirse en un fenomeno cultural, influyendo en peliculas, videojuegos, moda y arte.
+                </p>
+                <p>
+                "Bob Esponja" ha dejado una marca indeleble en la cultura popular, desafiando la gravedad y nadando en las profundidades del corazón de sus seguidores con su encanto y optimismo contagioso, sirviendo como un recordatorio de la importancia del humo y la amistad en nuestras vidas.
+                </p>
+                <img src="(agregara despues)" alt="Referencia Phineas y Ferb">
+                <img src="(agregara despues)" alt="Referencia Futurama">
+                <img src="(agregara despues)" alt="Referencia The Loud House">
+                <img src="(agregara despues)" alt="Referencia Los Simpson">
+
           
         </section>
 
