Update Texto historia
Se agrega el texto de la historia y estructura para la futura imagen

--- a/Index.HTML
+++ b/Index.HTML
@@ -53,6 +53,10 @@
 
         <section class="Historia">
             <h2>Historia</h2>
+            <p>
+                Bob Esponja, el inconico personaje creado por el biologo marino y animador Stepgen Hillenburg, tuvo sus humildes comienzos en un cortometraje educativo titulado "The Intertidal Zone" en 1984, donde servia como guia para explorar el fascinante mundo de la zona intermareal. Sin embargo, fue en 1996, tras la cancelación de su serie anterior, "La vida morderna de Rocko", cuando Hillenburg decidio darle vida a un nuevo proyecto basado en este carismatico personaje. Con el objetivo de crear una serie animada original, divertida y educativa para audiencias de todas las edades, Hillenburg comenzo a desarrollar lo que eventualemente se convertiria en "Bob Esponja Pantalnoes Cuadrados"
+                <img src="Se agregara despues" class="Imagen">
+            </p>
         </section>
             <section class="Estética">
                 <h2>Estética</h2>
