--- a/Index.HTML
+++ b/Index.HTML
@@ -62,7 +62,13 @@
 
         <br>
         <section class="CuriosidadesyTeorias">
-        <div class="tituloconfondo"><h2 id="tituloCyT">Curiosidades y Teorias</h2></div>
+
+        <div class="contenedor-titulo-cyt">
+            <div class="texto-titulo-cyt">
+                <h2 id="tituloCyT">Curiosidades y <br> Teorias</h2>
+            </div>
+        </div>
+
         <div class = "container">
             <div class="curiosidad5">
                 <h3>Curiosidad #5</h3>
@@ -107,7 +113,7 @@
         </section>
 
     <br>       
-        <section class="Miguel">
+        <section class="Memes">
             <h2>Memes</h2>
             <div class="contenedor">
 
