Apartado de Personajes
Se añadieron nuevos personajes con su respectiva hoja de estilos

--- a/Index.HTML
+++ b/Index.HTML
@@ -107,17 +107,53 @@
             <div class="container">
               <div class="div1"><img src="image.jpg" alt="Imagen bob esponja">
                 <p class="Bob">
+                  Bob Esponja 
+                  <br>
                   Es una esponja marina amarilla y optimista que vive en una piña debajo del mar. Trabaja como cocinero en el Crustáceo Cascarudo.
                 </p>
               </div>
               <div class="div2"><img src="image.jpg" alt="Imagen patricio estrella">
                 <p class="patricio">
+                  Patricio estrella
+                  <br>
                   Una estrella de mar rosa, perezosa, algo ingenua pero extremadamente leal, mejor amigo de Bob Esponja.
                 </p></div>
                 <div class="div3"><img src="image.jpg" alt="Imagen calamardo">
                   <p class="calamardo">
+                    Calamardo
+                    <br>
                     Un calamar gruñón y sarcástico que vive al lado de Bob Esponja. Trabaja como cajero en el Crustáceo Cascarudo y sueña con tener éxito en el arte. 
                   </p></div>
+                <div class="div4"><img src="image.jpg" alt="Imagen don cangrejo">
+                <p class="cangrejo">
+                     Don Cangrejo
+                     <br>
+                    Un cangrejo tacaño y obsesionado con el dinero, dueño del Crustáceo Cascarudo y jefe de Bob Esponja y Calamardo. 
+                </p></div>
+                <div class="div5"><img src="image.jpg" alt="Imagen Arenita">
+                <p class="arenita">
+                      Arenita
+                      <br>
+                      Una ardilla científica que vive en una cúpula de aire bajo el agua en Fondo de Bikini. Es amiga de Bob Esponja y Patricio.  
+                </p></div>
+                <div class="div6"><img src="image.jpg" alt="Imagen Señora Puff">
+                  <p class="señora">
+                        Señora Puff
+                        <br>
+                         Una pez globo que es instructura de la escuela de navegación de Fondo de Bikini, donde Bob Esponja ha intentado (sin éxito) obtener su licencia de conducir.   
+                  </p></div>
+                  <div class="div7"><img src="image.jpg" alt="Imagen Sheldon Plnakton">
+                    <p class="sheldon">
+                          Sheldon Plankton
+                          <br>
+                            Un plancton microscópico que es el rival de Don Cangrejo y dueño del Chum Bucket, restaurante rival del Crustáceo Cascarudo. Está constantemente tratando de robar la receta de las Cangreburgers. 
+                    </p></div>
+                    <div class="div8"><img src="image.jpg" alt="Imagen Karen Plankton">
+                      <p class="karen">
+                            Karen Plankton
+                            <br>
+                              Una computadora inteligente que opera el Chum Bucket, esposa de Sheldon Plankton. A menudo intenta persuadir a Plankton para que desista de sus planes malvados.   
+                      </p></div>
             </div>
             
         </section>
