Color y forma a las tarjetas
Se le agrego diseño, color y forma a las tarjetas que van en el apartado de la estetica

--- a/Index.HTML
+++ b/Index.HTML
@@ -34,34 +34,36 @@
         <section class="Historia">
             <h2>Historia</h2>
           
-        <section class="Estética">
-            <h2 id="tituloEstetica">Estetica</h2>
+        <section class="Estetica">
+            <h2 id="titulos-principales">Estetica</h2>
             <div class="card-container">
                 <div class="card">
                   <div class="card-face front">
-                    <img src="imagen1.jpg" alt="Imagen 1" id="imagenTarjetas">
+                    <img src="CSS/Imagenes/Imagenes Estetica/bob.mini.jfif" alt="Imagen 1" id="imagenTarjetas">
                   </div>
                   <div class="card-face back">
                     <h2>Diseño de Personajes Caricaturescos</h2>
-                    <p>prueba de texto en la carta.</p>
+                    <p class="texto-estetica">Los personajes están diseñados de manera exagerada y caricaturesca, con formas simples pero distintivas. Bob Esponja tiene un cuerpo rectangular con ojos grandes y una sonrisa amplia, mientras que Patricio es una estrella de mar rosa con una expresión simple.</p>
                   </div>
                 </div>
                 <div class="card">
                   <div class="card-face front">
-                    <img src="imagen2.jpg" alt="Imagen 2" id="imagenTarjetas">
+                    <img src="CSS/Imagenes/Imagenes Estetica/calamardo" alt="Imagen 2" id="imagenTarjetas">
                   </div>
                   <div class="card-face back">
                     <h2>Ambientes Fantasticos y Surrealistas</h2>
-                    <p>prueba de texto en la carta.</p>
+                    <p>La serie tiene lugar en Fondo de Bikini, un mundo submarino que mezcla elementos de la vida marina con una sensibilidad humorística. Los lugares como el Crustáceo Crujiente o la casa de Bob Esponja son representados de manera exagerada y a menudo absurdamente divertida.</p>
                   </div>
                 </div>
                 <div class="card">
                   <div class="card-face front">
-                    <img src="imagen3.jpg" alt="Imagen 3"id="imagenTarjetas">
+                    <img src="CSS/Imagenes/Imagenes Estetica/Gary.jpg" alt="Imagen 3"id="imagenTarjetas">
                   </div>
                   <div class="card-face back">
                     <h2>Referencias a la Cultura Popular</h2>
-                    <p>prueba de texto en la carta.</p>
+                    <p>La serie también está llena de referencias a la cultura popular, desde parodias de películas hasta bromas que pueden ser apreciadas por adultos y niños por igual. Esto le da a la serie una capa adicional de diversión para diferentes audiencias.
+
+                    </p>
                   </div>
                 </div>
               </div>
@@ -71,29 +73,29 @@
               <div class="card-container">
                 <div class="card">
                   <div class="card-face front">
-                    <img src="imagen1.jpg" alt="Imagen 4" id="imagenTarjetas">
+                    <img src="CSS/Imagenes/Imagenes Estetica/Casa.png" alt="Imagen 4" id="imagenTarjetas">
                   </div>
                   <div class="card-face back">
                     <h2>Colorimetria</h2>
-                    <p>prueba de texto en la carta</p>
+                    <p><img src="CSS/Imagenes/Imagenes Estetica/colorimetria.jfif" alt=""></p>
                   </div>
                 </div>
                 <div class="card">
                   <div class="card-face front">
-                    <img src="imagen2.jpg" alt="Imagen 5"id="imagenTarjetas">
+                    <img src="CSS/Imagenes/Imagenes Estetica/licencia.png" alt="Imagen 5"id="imagenTarjetas">
                   </div>
                   <div class="card-face back">
-                    <h2>Humor</h2>
-                    <p>prueba de texto en la carta</p>
+                    <h2>Humor</h2>   
+                    <p>Bob Esponja" utiliza mucho el humor visual, con escenas y gags que a menudo se basan en situaciones absurdas o reacciones exageradas de los personajes.</p>
                   </div>
                 </div>
                 <div class="card">
                   <div class="card-face front">
-                    <img src="imagen3.jpg" alt="Imagen 6" id="imagenTarjetas">
+                    <img src="CSS/Imagenes/Imagenes Estetica/crustaceo.png" alt="Imagen 6" id="imagenTarjetas">
                   </div>
                   <div class="card-face back">
                     <h2>Rasgos</h2>
-                    <p>Prueba de texto en la carta</p>
+                    <p>La serie se convirtió en una franquicia multimedia y es la quinta serie animada estadounidense de mayor duración. También es la propiedad intelectual más rentable para Paramount Consumer Products.</p>
                   </div>
                 </div>
               </div>
