Mejore el formato de el titulo de Curiosidades
Tambien agregue el estitlo para todos los titulos  en la hoja de estilos principal, para merge a main

--- a/Index.HTML
+++ b/Index.HTML
@@ -63,11 +63,10 @@
         <br>
         <section class="CuriosidadesyTeorias">
 
-        <div class="contenedor-titulo-cyt">
-            <div class="texto-titulo-cyt">
-                <h2 id="tituloCyT">Curiosidades y <br> Teorias</h2>
-            </div>
-        </div>
+        <section class="contenedor-titulo-cyt">
+                <img src="CSS/Imagenes/Titulo.png" id="fondo-titulo" alt="fondo">
+                <h2 id="titulos-principales">Curiosidades y <br> Teorias</h2>
+        </section>
 
         <div class = "container">
             <div class="curiosidad5">
@@ -113,7 +112,7 @@
         </section>
 
     <br>       
-        <section class="Memes">
+        <section class="memes">
             <h2>Memes</h2>
             <div class="contenedor">
 
