Se arregló la imagen

--- a/Index.HTML
+++ b/Index.HTML
@@ -39,8 +39,10 @@
                     <h2>Trama</h2>
                 </section>
                     <div class = "parrafos">
+                        <div class="img-container">
+                            <img src="CSS/Imagenes/logobob.png" class="img01" alt="">
+                        </div>
                         <p> 
-                            <img src="CSS/Imagenes/logobob.png"  class = "img.01" alt="">
                             <br>Es una serie acerca de una esponja de mar amarilla, llamada Bob Esponja Pantalones Cuadrados, que
                             vive en una piña en el fondo del mar en la ciudad de Fondo de Bikini. Es un cocinero entusiasta que
                             trabaja en el restaurante de comida rápida llamado el Crustáceo Cascarudo. Bob Esponja es conocido por su
