Correccion del ancho de cada contenedor flex y movimiento del titutlo

--- a/Index.HTML
+++ b/Index.HTML
@@ -70,42 +70,42 @@
 
         <div class = "container">
             <div class="curiosidad5">
-                <h3>Curiosidad #5</h3>
+                <h3>El origen del nombre</h3>
                 <img src="later"alt="Imagen5" class="imagenTarjetas">
                 <p>
-                    Bob Esponja iba a llamarse originalmente SpongeBoy: Pero tuvieron que cambiar el nombre porque ya estaba registrado para su uso comercial.
+                ¿Sabías que Bob casi se llamaba SpongeBoy?<br>El nombre original fue rechazado por estar registrado para uso comercial. ¡Menos mal que cambiaron a Bob Esponja!
                 </p>
             </div>
 
             <div class="curiosidad4">
-                <h3>Curiosidad #4</h3>
+                <h3>Fondo de Bikini</h3>
                 <div><img src="later"alt="Imagen4" class="imagenTarjetas"></div>
                 <p>
-                En muchas de las actividades que hace le va bien, sea tareas mecánicas o arte. En varias ocasiones lo vimos hacer cosas increíbles, pero tiene el problema de ser muy positivo con los demás. En cualquier caso, no es reconocido por sus logros, dado que Don Cangrejo no es un buen empleador y sus amigos no se dan cuenta de la inteligencia de Bob.
+                ¿Te has preguntado de dónde viene la inspiración para Fondo de Bikini? ¡No es pura ficción! Se inspira en el Atolón Bikini, un lugar real en el Océano Pacífico
                 </p>
             </div>
 
             <div class="curiosidad3">
-                <h3>Curiosidad #3</h3>
+                <h3>¿Coonspiracion?</h3>
                 <div><img src="later"alt="Imagen3" class="imagenTarjetas"></div>
                 <p>
-                Fondo de Bikini no es una invención puramente ficticia. De hecho, se inspira en el Atolón Bikini, situado en el Océano Pacífico, que es parte de las Islas Marshall.
+                Algunos fans creen que los personajes representan los 7 pecados capitales:<br> Cangrejo (codicia)<br>Plankton (envidia)<br>Patricio (pereza)<br>Arenita (orgullo)<br>Calamardo (ira)<br>Gary (gula)<br>Bob (lujuria)
                 </p>
             </div>
 
             <div class="curiosidad2">
-                <h3>Curiosidad #2</h3>
+                <h3>La voz del personaje</h3>
                 <div><img src="later" alt="Imagen2" class="imagenTarjetas"></div>
                 <p>
-                Los personajes son la personificación de los siete pecados capitales. La teoría explica que los personajes son los siete pecados capitales: Codicia (Cangrejo), Envidia (Plankton), Pereza (Patricio), Orgullo (Arenita), Ira (Calamardo), Gula (Gary) y Lujuria (Bob).
+                    Tom Kenny, el actor que le da voz, utiliza una técnica especial para sonar como un niño.
                 </p>
             </div>
 
             <div class="curiosidad1">
-                <h3>Curiosidad #1</h3>
+                <h3>Un éxito inesperado</h3>
                 <div><img src="later"alt="Imagen1" class="imagenTarjetas"></div>
                 <p>
-                Para algunos fanáticos está claro que las criaturas de la serie son resultado de las pruebas nucleares en el Atolón de Bikini. Este sitio existe realmente, y durante los años 40 y 50 fue el lugar de varias pruebas de este tipo. Es por eso también que la ciudad se llama Fondo de Bikini.
+                Nickelodeon solo ordenó una temporada, pero su éxito inesperado lo convirtió en un fenómeno mundial.
                 </p>
             </div>
         </div>
