--- a/Index.HTML
+++ b/Index.HTML
@@ -68,7 +68,7 @@
                 <h2 id="titulos-principales">Curiosidades y <br> Teorias</h2>
         </section>
 
-        <div class = "container">
+        <div class = "contenedor-curiosidades">
             <div class="curiosidad5">
                 <h3>Curiosidad #5</h3>
                 <img src="later"alt="Imagen5" class="imagenTarjetas">
