Se corrigio estilo de las tarjetas, centrado de texto y titulo

--- a/Index.HTML
+++ b/Index.HTML
@@ -87,7 +87,7 @@
 
         <div class = "contenedor-curiosidades">
             <div class="curiosidad5">
-                <h3>El origen del nombre</h3>
+                <h3 id="titulo-card">El origen del nombre</h3>
                 <img src="later"alt="Imagen5" class="imagenTarjetas">
                 <p>
                 Bob Esponja iba a llamarse originalmente SpongeBoy: Pero tuvieron que cambiar el nombre porque ya estaba registrado para su uso comercial.
@@ -95,7 +95,7 @@
             </div>
 
             <div class="curiosidad4">
-                <h3>Fondo de Bikini</h3>
+                <h3 id="titulo-card">Fondo de Bikini</h3>
                 <div><img src="later"alt="Imagen4" class="imagenTarjetas"></div>
                 <p>
                 ¿Te has preguntado de dónde viene la inspiración para Fondo de Bikini? ¡No es pura ficción! Se inspira en el Atolón Bikini, un lugar real en el Océano Pacífico
@@ -103,7 +103,7 @@
             </div>
 
             <div class="curiosidad3">
-                <h3>¿Coonspiracion?</h3>
+                <h3 id="titulo-card">¿Coonspiracion?</h3>
                 <div><img src="later"alt="Imagen3" class="imagenTarjetas"></div>
                 <p>
                 Algunos fans creen que los personajes representan los 7 pecados capitales:<br> Cangrejo (codicia)<br>Plankton (envidia)<br>Patricio (pereza)<br>Arenita (orgullo)<br>Calamardo (ira)<br>Gary (gula)<br>Bob (lujuria)
@@ -111,7 +111,7 @@
             </div>
 
             <div class="curiosidad2">
-                <h3>La voz del personaje</h3>
+                <h3 id="titulo-card">La voz del personaje</h3>
                 <div><img src="later" alt="Imagen2" class="imagenTarjetas"></div>
                 <p>
                 Tom Kenny, el actor que le da voz, utiliza una técnica especial para sonar como un niño.
@@ -119,7 +119,7 @@
             </div>
 
             <div class="curiosidad1">
-                <h3>Un éxito inesperado</h3>
+                <h3 id="titulo-card">Un éxito inesperado</h3>
                 <div><img src="later"alt="Imagen1" class="imagenTarjetas"></div>
                 <p>
                 Nickelodeon solo ordenó una temporada, pero su éxito inesperado lo convirtió en un fenómeno mundial. ¿Te imaginas un mundo sin Bob?
