--- a/Index.HTML
+++ b/Index.HTML
@@ -129,30 +129,33 @@
         </section>
 
     <br>       
-        <section class="memes">
-            <h2>Memes</h2>
-            <body>
-                <div class="container">
-                    <div class="image-text">
-                        <div class="image-group">
-                            <img src="CSS/Imagenes/BS 1.1.png" alt="Imagen 1">
-                            <img src="CSS/Imagenes/BS 1.2.png" alt="Imagen 2">
-                            <img src="CSS/Imagenes/BS 1.3.png" alt="Imagen 3">
-                            <img src="CSS/Imagenes/BS 1.4.png" alt="Imagen 4">
+    <section class="memes">
+        <h2 id="titulos-principales">Memes</h2>
+        <div class="container">
+            <div class="column">
+                <div class="image-text">
+                    <div class="column">
+                        <div class="image-text">
+                            <img src="CSS/Imagenes/BS11.png" alt="Imagen 5">   
                         </div>
-                        <p>Texto relacionado con las imágenes 1-4</p>
                     </div>
-                    <div class="image-text">
-                        <img src="imagen5.jpg" alt="Imagen 5">
-                        <p>Texto relacionado con la imagen 5</p>
-                    </div>
-                    <div class="image-text">
-                        <img src="imagen6.jpg" alt="Imagen 6">
-                        <p>Texto relacionado con la imagen 6</p>
-                    </div>
+                    <p>Yo cuando puse “hello world”</p>
                 </div>
-            </body>
-        </section>
+            </div>
+            <div class="column">
+                <div class="image-text">
+                    <img src="CSS/Imagenes/BS3.png" alt="Imagen 5">
+                    <p>-Y porque escogiste ingeniería en sistemas<br/>  -pues...</p>
+                </div>
+            </div>
+            <div class="column">
+                <div class="image-text">
+                    <img src="CSS/Imagenes/BS4.png" alt="Imagen 6">
+                    <p>Yo viendo mi código terminado <br/> (no funciona)</p>
+                </div>
+            </div>
+        </div>
+    </section>
     </main>
 </body>
 <footer>
