Arregle el margen de mi seccion
Se arreglaron los margenes ya que se habia borrado el final de mi seccion

--- a/Index.HTML
+++ b/Index.HTML
@@ -38,7 +38,7 @@
         </section>
       
         <!-- Jennifer -->
-        <section class="Estética">
+        
            <section class="Estetica">
             <h2 id="titulos-principales">Estetica</h2>
             <div class="card-container">
@@ -104,7 +104,7 @@
                   </div>
                 </div>
               </div>
-
+           </section>
         <!-- Mily -->
         <section class="Personajes">
             <h2>Personajes</h2>
