Arregle el margen de mi seccion

--- a/Index.HTML
+++ b/Index.HTML
@@ -79,7 +79,7 @@
     </section>
 
     <!-- Jennifer -->
-    <section class="Estética">
+   
       <section class="Estetica">
         <h2 id="titulos-principales">Estetica</h2>
         <div class="card-container">
@@ -154,6 +154,7 @@
           </div>
         </div>
 
+        </section>
         <!-- Mily -->
         <section class="Personajes">
           <h2>Personajes</h2>
