--- a/Index.HTML
+++ b/Index.HTML
@@ -157,67 +157,83 @@
         </section>
         <!-- Mily -->
         <section class="Personajes">
-          <h2>Personajes</h2>
-          <div class="container">
+          <h2 class="titulo-seccion">Personajes</h2>
+          <div class="containerpersonajes">
             <div class="div1"><img src="image.jpg" alt="Imagen bob esponja">
-              <p class="Bob">
+              <p class="titulos-principales">
                 Bob Esponja
                 <br>
+              </p>
+                <p class="Bob">
                 Es una esponja marina amarilla y optimista que vive en una piña debajo del mar. Trabaja como cocinero en
                 el Crustáceo Cascarudo.
               </p>
             </div>
             <div class="div2"><img src="image.jpg" alt="Imagen patricio estrella">
-              <p class="patricio">
+              <p class="titulos-principales">
                 Patricio estrella
                 <br>
+              </p>
+              <p class="patricio">
                 Una estrella de mar rosa, perezosa, algo ingenua pero extremadamente leal, mejor amigo de Bob Esponja.
               </p>
             </div>
             <div class="div3"><img src="image.jpg" alt="Imagen calamardo">
-              <p class="calamardo">
+              <p class="titulos-principales">
                 Calamardo
                 <br>
+              </p>
+              <p class="calamardo">
                 Un calamar gruñón y sarcástico que vive al lado de Bob Esponja. Trabaja como cajero en el Crustáceo
                 Cascarudo y sueña con tener éxito en el arte.
               </p>
             </div>
             <div class="div4"><img src="image.jpg" alt="Imagen don cangrejo">
-              <p class="cangrejo">
+              <p class="titulos-principales">
                 Don Cangrejo
                 <br>
+              </p>
+              <p class="cangrejo">
                 Un cangrejo tacaño y obsesionado con el dinero, dueño del Crustáceo Cascarudo y jefe de Bob Esponja y
                 Calamardo.
               </p>
             </div>
             <div class="div5"><img src="image.jpg" alt="Imagen Arenita">
-              <p class="arenita">
-                Arenita
+              <p class="titulos-principales">
+                Arenita Mejillas
                 <br>
+              </p>
+              <p class="arenita">
                 Una ardilla científica que vive en una cúpula de aire bajo el agua en Fondo de Bikini. Es amiga de Bob
                 Esponja y Patricio.
               </p>
             </div>
             <div class="div6"><img src="image.jpg" alt="Imagen Señora Puff">
-              <p class="señora">
+              <p class="titulos-principales">
                 Señora Puff
                 <br>
+              </p>
+              <p class="señora">
                 Una pez globo que es instructura de la escuela de navegación de Fondo de Bikini, donde Bob Esponja ha
                 intentado (sin éxito) obtener su licencia de conducir.
               </p>
             </div>
             <div class="div7"><img src="image.jpg" alt="Imagen Sheldon Plnakton">
-              <p class="sheldon">
+              <p class="titulos-principales">
                 Sheldon Plankton
                 <br>
+              </p>
+              <p class="sheldon">
                 Un plancton microscópico que es el rival de Don Cangrejo y dueño del Chum Bucket, restaurante rival del
                 Crustáceo Cascarudo. Está constantemente tratando de robar la receta de las Cangreburgers.
               </p>
             </div>
             <div class="div8"><img src="image.jpg" alt="Imagen Karen Plankton">
-              <p class="karen">
+              <p class="titulos-principales">
                 Karen Plankton
                 <br>
+              </p>
+              <p class="karen">
                 Una computadora inteligente que opera el Chum Bucket, esposa de Sheldon Plankton. A menudo intenta
                 persuadir a Plankton para que desista de sus planes malvados.
               </p>
