--- a/Index.HTML
+++ b/Index.HTML
@@ -39,15 +39,15 @@
         <div id="texto">
           <div class="parrafos">
             <div class="img-container">
-              <img src="CSS/Imagenes/logobob.png" class="img01" alt="">
+              <img src="CSS/Imagenes/bob.logo.png" class="img01" alt="">
             </div>
-            <p>
+            <p class="letra">
               <br>Es una serie acerca de una esponja de mar amarilla, llamada Bob Esponja Pantalones Cuadrados, que
               vive en una piña en el fondo del mar en la ciudad de Fondo de Bikini. Es un cocinero entusiasta que
               trabaja en el restaurante de comida rápida llamado el Crustáceo Cascarudo. Bob Esponja es conocido por su
               optimismo, su entusiasmo, su torpeza y su amor por las medusas.
             </p>
-            <p>
+            <p class="letra">
               La serie sigue las aventuras de Bob Esponja y sus amigos. Juntos, se enfrentan a una variedad de
               desafíos y aventuras, desde atrapar medusas hasta salvar el día de los malvados planes de Plankton,
               el dueño del restaurante rival, el Balde de Carnada, que se sitúa enfrente del Crustáceo Cascarudo.
