--- a/Index.HTML
+++ b/Index.HTML
@@ -159,8 +159,8 @@
         <section class="Personajes">
           <h2 class="titulo-seccion">Personajes</h2>
           <div class="containerpersonajes">
-            <div class="div1"><img src="image.jpg" alt="Imagen bob esponja">
-              <p class="titulos-principales">
+            <div class="div1"><img src="CSS/Imagenes/bobes.webp" alt="Imagen bob esponja" class="imagenespersonajes">
+              <p class="titulosdivs">
                 Bob Esponja
                 <br>
               </p>
@@ -169,8 +169,8 @@
                 el Crustáceo Cascarudo.
               </p>
             </div>
-            <div class="div2"><img src="image.jpg" alt="Imagen patricio estrella">
-              <p class="titulos-principales">
+            <div class="div2"><img src="CSS/Imagenes/patricioes.webp" alt="Imagen patricio estrella" class="imagenespersonajes">
+              <p class="titulosdivs">
                 Patricio estrella
                 <br>
               </p>
@@ -178,8 +178,8 @@
                 Una estrella de mar rosa, perezosa, algo ingenua pero extremadamente leal, mejor amigo de Bob Esponja.
               </p>
             </div>
-            <div class="div3"><img src="image.jpg" alt="Imagen calamardo">
-              <p class="titulos-principales">
+            <div class="div3"><img src="CSS/Imagenes/calamardoo.png" alt="Imagen calamardo" class="imagencalamardo">
+              <p class="titulosdivs">
                 Calamardo
                 <br>
               </p>
@@ -188,8 +188,8 @@
                 Cascarudo y sueña con tener éxito en el arte.
               </p>
             </div>
-            <div class="div4"><img src="image.jpg" alt="Imagen don cangrejo">
-              <p class="titulos-principales">
+            <div class="div4"><img src="CSS/Imagenes/cangrejo.webp" alt="Imagen don cangrejo" class="imagenespersonajes">
+              <p class="titulosdivs">
                 Don Cangrejo
                 <br>
               </p>
@@ -198,8 +198,8 @@
                 Calamardo.
               </p>
             </div>
-            <div class="div5"><img src="image.jpg" alt="Imagen Arenita">
-              <p class="titulos-principales">
+            <div class="div5"><img src="CSS/Imagenes/arenitaam.png" alt="Imagen Arenita" class="imagenespersonajes">
+              <p class="titulosdivs">
                 Arenita Mejillas
                 <br>
               </p>
@@ -208,8 +208,8 @@
                 Esponja y Patricio.
               </p>
             </div>
-            <div class="div6"><img src="image.jpg" alt="Imagen Señora Puff">
-              <p class="titulos-principales">
+            <div class="div6"><img src="CSS/Imagenes/puff.webp" alt="Imagen Señora Puff" class="imagenespersonajes">
+              <p class="titulosdivs">
                 Señora Puff
                 <br>
               </p>
@@ -218,18 +218,17 @@
                 intentado (sin éxito) obtener su licencia de conducir.
               </p>
             </div>
-            <div class="div7"><img src="image.jpg" alt="Imagen Sheldon Plnakton">
-              <p class="titulos-principales">
+            <div class="div7"><img src="CSS/Imagenes/planktonn.webp" alt="Imagen Sheldon Plnakton" class="imagenespersonajes">
+              <p class="titulosdivs">
                 Sheldon Plankton
                 <br>
               </p>
               <p class="sheldon">
-                Un plancton microscópico que es el rival de Don Cangrejo y dueño del Chum Bucket, restaurante rival del
-                Crustáceo Cascarudo. Está constantemente tratando de robar la receta de las Cangreburgers.
+                Un plancton microscópico, rival de Don Cangrejo y dueño del Chum Bucket. Trata constantemente de robar la receta de las Cangreburgers.
               </p>
             </div>
-            <div class="div8"><img src="image.jpg" alt="Imagen Karen Plankton">
-              <p class="titulos-principales">
+            <div class="div8"><img src="CSS/Imagenes/karenp.webp" alt="Imagen Karen Plankton" class="imagenespersonajes">
+              <p class="titulosdivs">
                 Karen Plankton
                 <br>
               </p>
