Barra de navegacion
Se agrego y diseño la barra de navegacion

--- a/Index.HTML
+++ b/Index.HTML
@@ -19,11 +19,28 @@
   <link rel="stylesheet" href="CSS/Personajes.css">
   <link rel="stylesheet" href="CSS/Trama.css">
   <link rel="stylesheet" href="CSS/Historia.css">
+  <link rel="stylesheet" href="CSS/Header.css">
 </head>
 
 <body>
   <header>
-    <p>Header</p>
+    
+    <div class="espacio-header">
+      <nav>
+        <ul>
+          <li><a href="#Trama">Trama</a></li>
+          <li><a href="#Historia">Historia</a></li>
+          <li><a href="#Estetica">Estetica</a></li>
+          <li><a href="#Personajes">Personajes</a></li>
+          <li><a href="#Impacto-Cultural">Impacto-Cultural</a></li>
+          <li><a href="#Curiosidades-Teorias"> Curiosidade-Teorias</a></li>
+        </ul>
+      </nav>
+      <div class="logo">
+        <img src="CSS/Imagenes/Imagenes Estetica/logo.webp" alt="Logo">
+      </div>
+    </div>
+
     <div class="banner">
 
     </div>
@@ -33,7 +50,7 @@
 
 
     <!-- Leonor -->
-    <section class="Trama">
+    <section class="Trama" id="Trama">
       <h2 id="titulos-principales" class="centrado">Trama</h2>
       <section class="bordes">
         <div id="texto">
@@ -61,7 +78,7 @@
     </section>
 
     <!-- Amelia -->
-    <section class="Historia">
+    <section class="Historia" id="Historia">
       <h2>Historia</h2>
       <div>
         <p>
@@ -80,7 +97,7 @@
 
     <!-- Jennifer -->
    
-      <section class="Estetica">
+      <section class="Estetica" id="Estetica">
         <h2 id="titulos-principales">Estetica</h2>
         <div class="card-container">
           <div class="card">
@@ -156,7 +173,7 @@
 
         </section>
         <!-- Mily -->
-        <section class="Personajes">
+        <section class="Personajes" id="Personajes">
           <h2 class="titulo-seccion">Personajes</h2>
           <div class="containerpersonajes">
             <div class="div1"><img src="CSS/Imagenes/bobes.webp" alt="Imagen bob esponja" class="imagenespersonajes">
@@ -242,19 +259,19 @@
         </section>
 
         <!-- Daniel -->
-        <section class="Impacto-cultural">
+        <section class="Impacto-cultural" id="Impacto-cultural">
           <h2>Impacto Cultural</h2>
 
         </section>
 
         <!-- Geovanny -->
-        <section class="Curiosidade-Teorias">
+        <section class="Curiosidade-Teorias" id="Curiosidades-Teorias">
           <h2>Curiosidades y Teorias</h2>
 
         </section>
 
         <!-- Miguel -->
-        <section class="Miguel">
+        <section class="Miguel" id="Miguel">
           <h2>Impacto Cultural</h2>
 
         </section>
