Revert "Seccion de Curiosidades y Teorias terminada"
This reverts commit 688b5be5663a551d334eb1faa033dee953498380.

--- a/Index.HTML
+++ b/Index.HTML
@@ -88,39 +88,39 @@
 
         <div class = "contenedor-curiosidades">
             <div class="curiosidad5">
-                <h3 id="titulo-card"><strong>El origen del nombre</strong></h3>
-                <img src="/CSS/Imagenes/CuriosidadesyTeorias/SpongeBoy.jpeg"alt="Imagen5" class="imagenTarjetas">
+                <h3 id="titulo-card">El origen del nombre</h3>
+                <img src="/CSS/Imagenes/CuriosidadesyTeorias/SpongeBoy.webp"alt="Imagen5" class="imagenTarjetas">
                 <p>
                 Bob Esponja iba a llamarse originalmente SpongeBoy: Pero tuvieron que cambiar el nombre porque ya estaba registrado para su uso comercial.
                 </p>
             </div>
 
             <div class="curiosidad4">
-                <h3 id="titulo-card"><b>Fondo de Bikini</b></h3>
-                <img src="/CSS/Imagenes/CuriosidadesyTeorias/FondodeBikini.jpeg" alt="Imagen4" class="imagenTarjetas">
+                <h3 id="titulo-card">Fondo de Bikini</h3>
+                <div><img src="/CSS/Imagenes/CuriosidadesyTeorias/FondodeBikini.jpeg" alt="Imagen4" class="imagenTarjetas"></div>
                 <p>
                 ¿Te has preguntado de dónde viene la inspiración para Fondo de Bikini? ¡No es pura ficción! Se inspira en el Atolón Bikini, un lugar real en el Océano Pacífico
                 </p>
             </div>
 
             <div class="curiosidad3">
-                <h3 id="titulo-card"><b>¿Coonspiracion?</b></h3>
-                <div><img src="/CSS/Imagenes/CuriosidadesyTeorias/Sorpresa.png"alt="Imagen3" class="imagenTarjetas"></div>
+                <h3 id="titulo-card">¿Coonspiracion?</h3>
+                <div><img src="/CSS/Imagenes/CuriosidadesyTeorias/Funa.gif"alt="Imagen3" class="imagenTarjetas"></div>
                 <p>
-                Algunos fans creen que los personajes representan los 7 pecados capitales:<br> • Cangrejo (codicia)<br> • Plankton (envidia)<br> • Patricio (pereza)<br> • Arenita (orgullo)<br> • Calamardo (ira)<br> • Gary (gula)<br> • Bob (lujuria)
+                Algunos fans creen que los personajes representan los 7 pecados capitales:<br> Cangrejo (codicia)<br>Plankton (envidia)<br>Patricio (pereza)<br>Arenita (orgullo)<br>Calamardo (ira)<br>Gary (gula)<br>Bob (lujuria)
                 </p>
             </div>
 
             <div class="curiosidad2">
-                <h3 id="titulo-card"><b>La voz del personaje</b></h3>
+                <h3 id="titulo-card">La voz del personaje</h3>
                 <div><img src="/CSS/Imagenes/CuriosidadesyTeorias/TomKenny.jpg" alt="Imagen2" class="imagenTarjetas"></div>
                 <p>
-                Tom Kenny, el actor que le da voz, utiliza una técnica especial para sonar como un niño. Ademas interpreta muchisimos otros personajes iconicos, sin duda talento innato.
+                Tom Kenny, el actor que le da voz, utiliza una técnica especial para sonar como un niño.
                 </p>
             </div>
 
             <div class="curiosidad1">
-                <h3 id="titulo-card"><b>Un éxito inesperado</b></h3>
+                <h3 id="titulo-card">Un éxito inesperado</h3>
                 <div><img src="/CSS/Imagenes/CuriosidadesyTeorias/Exito.jpg"alt="Imagen1" class="imagenTarjetas"></div>
                 <p>
                 Nickelodeon solo ordenó una temporada, pero su éxito inesperado lo convirtió en un fenómeno mundial. ¿Te imaginas un mundo sin Bob?
