--- a/Index.HTML
+++ b/Index.HTML
@@ -267,9 +267,9 @@
         <!-- Geovanny -->
         <section class="Curiosidade-Teorias" id="Curiosidades-Teorias">
           <section class="contenedor-titulo-cyt">
-            <img src="CSS/Imagenes/Titulo.png" id="fondo-titulo" alt="fondo">
+            <img src="CSS/Imagenes/CuriosidadesyTeorias/Titulo.png" id="fondo-titulo" alt="fondo">
             <h2 id="titulos-principales">Curiosidades y <br> Teorias</h2>
-    </section>
+        </section>
 
     <div class = "contenedor-curiosidades">
         <div class="curiosidad5">
@@ -290,9 +290,9 @@
 
         <div class="curiosidad3">
             <h3 id="titulo-card">¿Coonspiracion?</h3>
-            <div><img src="/CSS/Imagenes/CuriosidadesyTeorias/Funa.gif"alt="Imagen3" class="imagenTarjetas"></div>
+            <div><img src="/CSS/Imagenes/CuriosidadesyTeorias/Sorpresa.png"alt="Imagen3" class="imagenTarjetas"></div>
             <p>
-            Algunos fans creen que los personajes representan los 7 pecados capitales:<br> Cangrejo (codicia)<br>Plankton (envidia)<br>Patricio (pereza)<br>Arenita (orgullo)<br>Calamardo (ira)<br>Gary (gula)<br>Bob (lujuria)
+            Algunos fans creen que los personajes representan los 7 pecados capitales:<br> • Cangrejo (codicia)<br> • Plankton (envidia)<br> • Patricio (pereza)<br> • Arenita (orgullo)<br> • Calamardo (ira)<br> • Gary (gula)<br> • Bob (lujuria)
             </p>
         </div>
 
