--- a/Index.HTML
+++ b/Index.HTML
@@ -258,22 +258,16 @@
 
         </section>
 
-        <!-- Daniel -->
-        <section class="Impacto-cultural" id="Impacto-cultural">
-          <h2>Impacto Cultural</h2>
-
-        </section>
-
         <!-- Geovanny -->
-        <section class="Curiosidade-Teorias" id="Curiosidades-Teorias">
+    <section class="CuriosidadesyTeorias" id="Curiosidades-Teorias">
           <section class="contenedor-titulo-cyt">
             <img src="CSS/Imagenes/CuriosidadesyTeorias/Titulo.png" id="fondo-titulo" alt="fondo">
             <h2 id="titulos-principales">Curiosidades y <br> Teorias</h2>
         </section>
 
-    <div class = "contenedor-curiosidades">
+        <div class = "contenedor-curiosidades">
         <div class="curiosidad5">
-            <h3 id="titulo-card">El origen del nombre</h3>
+            <h3 class="titulo-card">El origen del nombre</h3>
             <img src="/CSS/Imagenes/CuriosidadesyTeorias/SpongeBoy.jpeg"alt="Imagen5" class="imagenTarjetas">
             <p>
             Bob Esponja iba a llamarse originalmente SpongeBoy: Pero tuvieron que cambiar el nombre porque ya estaba registrado para su uso comercial.
@@ -281,7 +275,7 @@
         </div>
 
         <div class="curiosidad4">
-            <h3 id="titulo-card">Fondo de Bikini</h3>
+            <h3 class="titulo-card">Fondo de Bikini</h3>
             <div><img src="/CSS/Imagenes/CuriosidadesyTeorias/FondodeBikini.jpeg" alt="Imagen4" class="imagenTarjetas"></div>
             <p>
             ¿Te has preguntado de dónde viene la inspiración para Fondo de Bikini? ¡No es pura ficción! Se inspira en el Atolón Bikini, un lugar real en el Océano Pacífico
@@ -289,7 +283,7 @@
         </div>
 
         <div class="curiosidad3">
-            <h3 id="titulo-card">¿Coonspiracion?</h3>
+            <h3 class="titulo-card">¿Coonspiracion?</h3>
             <div><img src="/CSS/Imagenes/CuriosidadesyTeorias/Sorpresa.png"alt="Imagen3" class="imagenTarjetas"></div>
             <p>
             Algunos fans creen que los personajes representan los 7 pecados capitales:<br> • Cangrejo (codicia)<br> • Plankton (envidia)<br> • Patricio (pereza)<br> • Arenita (orgullo)<br> • Calamardo (ira)<br> • Gary (gula)<br> • Bob (lujuria)
@@ -297,7 +291,7 @@
         </div>
 
         <div class="curiosidad2">
-            <h3 id="titulo-card">La voz del personaje</h3>
+            <h3 class="titulo-card">La voz del personaje</h3>
             <div><img src="/CSS/Imagenes/CuriosidadesyTeorias/TomKenny.jpg" alt="Imagen2" class="imagenTarjetas"></div>
             <p>
             Tom Kenny, el actor que le da voz, utiliza una técnica especial para sonar como un niño.
@@ -305,7 +299,7 @@
         </div>
 
         <div class="curiosidad1">
-            <h3 id="titulo-card">Un éxito inesperado</h3>
+            <h3 class="titulo-card">Un éxito inesperado</h3>
             <div><img src="/CSS/Imagenes/CuriosidadesyTeorias/Exito.jpg"alt="Imagen1" class="imagenTarjetas"></div>
             <p>
             Nickelodeon solo ordenó una temporada, pero su éxito inesperado lo convirtió en un fenómeno mundial. ¿Te imaginas un mundo sin Bob?
@@ -313,7 +307,7 @@
         </div>
     </div>
 
-        </section>
+  </section>
 
         <!-- Miguel -->
         <section class="Miguel" id="Miguel">
