--- a/Index.HTML
+++ b/Index.HTML
@@ -71,7 +71,7 @@
         <!-- Amelia -->
         <section class="Historia">
             <h2 id="titulos-principales" class="centrado">Historia</h2>
-            <section class="contener">
+            <section class="contenerh">
                 <div class="caja">
                     <div >
                     <p class="parrafo">
@@ -87,7 +87,7 @@
                     </div>
                 </div>    
                 <div class="caja">
-                    <img src="CSS/Imagenes/bob-creador.png" class= "img02" alt="">
+                    <img src="CSS/Imagenes/bob-creador.png" class= "bobyc" alt="">
                 </div>
               
             </section>
