--- a/Index.HTML
+++ b/Index.HTML
@@ -174,7 +174,7 @@
         </section>
         <!-- Mily -->
         <section class="Personajes" id="Personajes">
-          <h2 class="titulo-seccion">Personajes</h2>
+          <h2 id="titulos-principales" class="centrado">Personajes</h2>
           <div class="containerpersonajes">
             <div class="div1"><img src="CSS/Imagenes/bobes.webp" alt="Imagen bob esponja" class="imagenespersonajes">
               <p class="titulosdivs">
