--- a/Index.HTML
+++ b/Index.HTML
@@ -33,8 +33,7 @@
           <li><a href="#Historia">Historia</a></li>
           <li><a href="#Estetica">Estetica</a></li>
           <li><a href="#Personajes">Personajes</a></li>
-          <li><a href="#Impacto-Cultural">Impacto-Cultural</a></li>
-          <li><a href="#Curiosidades-Teorias"> Curiosidade-Teorias</a></li>
+          <li><a href="#Curiosidades-Teorias"> Curiosidades y Teorias</a></li>
         </ul>
       </nav>
       <div class="logo">
