--- a/Index.HTML
+++ b/Index.HTML
@@ -104,9 +104,9 @@
     </section>
 
     <!-- Jennifer -->
-   
+    <div class="titilo-estetica"> <H2  id="titulos-principales">Estetica</H2></div>
       <section class="Estetica" id="Estetica">
-        <h2 id="titulos-principales">Estetica</h2>
+       
         <div class="card-container">
           <div class="card">
             <div class="card-face front">
@@ -114,8 +114,8 @@
             </div>
             <div class="card-face back">
               <h2>Diseño de Personajes Caricaturescos</h2>
-              <p class="texto-estetica">Los personajes están diseñados de manera exagerada y caricaturesca, con formas
-                simples pero distintivas. Bob Esponja tiene un cuerpo rectangular con ojos grandes y una sonrisa amplia,
+              <p >Los personajes están diseñados de manera exagerada y caricaturesca, con formas
+                simples pero distintivas. </p> <p class="texto-estetica">Bob Esponja tiene un cuerpo rectangular con ojos grandes y una sonrisa amplia,
                 mientras que Patricio es una estrella de mar rosa con una expresión simple.</p>
             </div>
           </div>
@@ -126,7 +126,7 @@
             <div class="card-face back">
               <h2>Ambientes Fantasticos y Surrealistas</h2>
               <p>La serie tiene lugar en Fondo de Bikini, un mundo submarino que mezcla elementos de la vida marina con
-                una sensibilidad humorística. Los lugares como el Crustáceo Crujiente o la casa de Bob Esponja son
+                una sensibilidad humorística. </p><p class="texto-estetica"> Los lugares como el Crustáceo Crujiente o la casa de Bob Esponja son
                 representados de manera exagerada y a menudo absurdamente divertida.</p>
             </div>
           </div>
@@ -137,10 +137,8 @@
             <div class="card-face back">
               <h2>Referencias a la Cultura Popular</h2>
               <p>La serie también está llena de referencias a la cultura popular, desde parodias de películas hasta
-                bromas que pueden ser apreciadas por adultos y niños por igual. Esto le da a la serie una capa adicional
-                de diversión para diferentes audiencias.
-
-              </p>
+                bromas que pueden ser apreciadas por adultos y niños por igual. </p> <p Class="texto-estetica"> Esto le da a la serie una capa adicional
+                de diversión para diferentes audiencias.</p>
             </div>
           </div>
         </div>
@@ -163,6 +161,7 @@
             </div>
             <div class="card-face back">
               <h2>Humor</h2>
+              <img class="imagen-humor" src="CSS/Imagenes/Imagenes Estetica/humor-bob.jpg"alt="">
               <p>Bob Esponja" utiliza mucho el humor visual, con escenas y gags que a menudo se basan en situaciones
                 absurdas o reacciones exageradas de los personajes.</p>
             </div>
@@ -173,6 +172,7 @@
             </div>
             <div class="card-face back">
               <h2>Rasgos</h2>
+              <img class="imagen-humor" src="CSS/Imagenes/Imagenes Estetica/bob-dinero.webp"alt="">
               <p>La serie se convirtió en una franquicia multimedia y es la quinta serie animada estadounidense de mayor
                 duración. También es la propiedad intelectual más rentable para Paramount Consumer Products.</p>
             </div>
